update start sh config